--- a/locales/en.json
+++ b/locales/en.json
@@ -14,5 +14,23 @@
   "number.min": "{{label}} cannot be less than {{min}}",
   "number.nan": "{{label}} must be NaN",
   "number.notnan": "{{label}} cannot be NaN",
-  "number.number": "{{label}} must be of type number or BigInt"
+  "number.number": "{{label}} must be of type number or BigInt",
+  "string.ascii": "{{label}} may only contain ascii characters",
+  "string.base64": "{{label}} must be a base64 formatted string",
+  "string.contains": "{{label}} must contain {{expectedValue}}",
+  "string.empty": "{{label}} must be an empty string",
+  "string.endswith": "{{label}} must end with {{expectedEnd}}",
+  "string.equalscaseinsensitive": "{{label}} must equal {{expectedValue}} (case insensitive)",
+  "string.extendedascii": "{{label}} may only contain extended ascii characters",
+  "string.hexcolor": "{{label}} must be a hex color",
+  "string.json": "{{label}} must be a JSON string",
+  "string.length": "{{label}} must have length {{expectedLength}}",
+  "string.lowercase": "{{label}} must be an all lowercase string",
+  "string.match": "{{label}} must match {{pattern}}",
+  "string.max": "{{label}} length cannot be longer than {{maxLength}}",
+  "string.min": "{{label}} length cannot be less than {{minLength}}",
+  "string.notempty": "{{label}} cannot be empty",
+  "string.startswith": "{{label}} must start with {{expectedStart}}",
+  "string.string": "{{label}} must be of type string",
+  "string.uppercase": "{{label}} must be an all uppercase string"
 }
