--- a/locales/en.json
+++ b/locales/en.json
@@ -6,6 +6,12 @@
   "boolean.boolean": "{{label}} must be of type boolean",
   "boolean.false": "{{label}} must be false",
   "boolean.true": "{{label}} must be true",
+  "email.domain": "{{label}} email domain must match {{expectedDomain}}",
+  "email.domainblacklist": "{{label}} email domain {{domain}} is not allowed",
+  "email.email": "{{label}} must be a valid email address",
+  "email.name": "{{label}} email name must match {{expectedName}}",
+  "email.tld": "{{label}} email TLD must be one of [{{tlds}}]",
+  "email.tldblacklist": "{{label}} email cannot have TLD {{tld}}",
   "number.bigint": "{{label}} must be of type BigInt",
   "number.gt": "{{label}} must be greater than {{gt}}",
   "number.int": "{{label}} must be an integer value",
