--- a/locales/en.json
+++ b/locales/en.json
@@ -12,6 +12,13 @@
   "email.name": "{{label}} email name must match {{expectedName}}",
   "email.tld": "{{label}} email TLD must be one of [{{tlds}}]",
   "email.tldblacklist": "{{label}} email cannot have TLD {{tld}}",
+  "network.ip": "{{label}} must be a valid IP address",
+  "network.ipv4": "{{label}} must be a valid IPv4 address",
+  "network.ipv6": "{{label}} must be a valid IPv6 address",
+  "network.mac": "{{label}} must be a valid MAC address",
+  "network.tld": "{{label}} URL TLD must be one of [{{tlds}}]",
+  "network.tldblacklist": "{{label}} URL cannot have TLD {{tld}}",
+  "network.url": "{{label}} must be a valid URL",
   "number.bigint": "{{label}} must be of type BigInt",
   "number.gt": "{{label}} must be greater than {{gt}}",
   "number.int": "{{label}} must be an integer value",
