--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,14 @@
 {
+  "array.array": "{{label}} must be an array",
+  "array.contains": "{{label}} must contain {{expectedValue}}",
+  "array.each": "{{label}} each: {{message}}",
+  "array.equals": "{{label}} must (shallow) equal [{{expectedValue}}]",
+  "array.subset": "{{label}} must be a subset of [{{superset}}]",
+  "array.superset": "{{label}} must be a superset of [{{subset}}]",
+  "array.length": "{{label}} must have length {{expectedLength}}",
+  "array.max": "{{label}} length cannot be longer than {{maxLength}}",
+  "array.min": "{{label}} length cannot be less than {{minLength}}",
+  "array.of": "{{label}} must be an array of {{type}}",
   "base.blacklist": "Value {{value}} is not allowed for {{label}}",
   "base.enum": "{{label}} value must be one of [{{enum}}]",
   "base.equals": "{{label}} must equal {{expectedValue}}",
