--- a/locales/en.json
+++ b/locales/en.json
@@ -38,6 +38,15 @@
   "number.nan": "{{label}} must be NaN",
   "number.notnan": "{{label}} cannot be NaN",
   "number.number": "{{label}} must be of type number or BigInt",
+  "object.contains": "{{label}} must contain value {{expectedValue}}",
+  "object.equals": "{{label}} must (shallow) equal {{expectedValue}}",
+  "object.hasownproperty": "{{label}} must contain property {{key}}",
+  "object.length": "{{label}} own properties must have length {{expectedLength}}",
+  "object.max": "{{label}} own properties length cannot be longer than {{maxLength}}",
+  "object.min": "{{label}} own properties length cannot be less than {{minLength}}",
+  "object.object": "{{label}} must be an object",
+  "object.subset": "{{label}} must be a subset of {{superset}}",
+  "object.superset": "{{label}} must be a superset of {{subset}}",
   "string.ascii": "{{label}} may only contain ascii characters",
   "string.base64": "{{label}} must be a base64 formatted string",
   "string.contains": "{{label}} must contain {{expectedValue}}",
