Add schema validation

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,7 @@
   "base.enum": "{{label}} value must be one of [{{enum}}]",
   "base.equals": "{{label}} must equal {{expectedValue}}",
   "base.forbidden": "{{label}} is not allowed to be defined",
+  "base.required": "{{label}} is required",
   "boolean.boolean": "{{label}} must be of type boolean",
   "boolean.false": "{{label}} must be false",
   "boolean.true": "{{label}} must be true",
@@ -44,6 +45,7 @@
   "object.length": "{{label}} own properties must have length {{expectedLength}}",
   "object.max": "{{label}} own properties length cannot be longer than {{maxLength}}",
   "object.min": "{{label}} own properties length cannot be less than {{minLength}}",
+  "object.notinschema": "{{label}} is not defined is schema",
   "object.object": "{{label}} must be an object",
   "object.subset": "{{label}} must be a subset of {{superset}}",
   "object.superset": "{{label}} must be a superset of {{subset}}",
